// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler options when TSConfig file has errors: stderr 1`] = `
"Error: Compiler option 'strict' requires a value of type boolean. ts(5024)

  2 |   "compilerOptions": {
  3 |     "noEmitOnError": true,
> 4 |     "strict": "yes",
    |               ^
  5 |     "strictNullChecks": true
  6 |   },
  7 |   "extends": "../tsconfig.json",

      at ./tsconfig.json:4:15

"
`;

exports[`compiler options when TSConfig file has errors: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/dummy.tst.ts
  + is string?

Targets:    1 failed, 1 total
Test files: 1 passed, 1 total
Tests:      1 passed, 1 total
Assertions: 1 passed, 1 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`compiler options when no test files are present: stderr 1`] = `
"Error: No test files were selected using current configuration.

Root path:       <<cwd>>/tests/__fixtures__/validation-runner
Test file match: **/*.tst.*, **/__typetests__/*.test.*, **/typetests/*.test.*

"
`;

exports[`compiler options when no test files are present: stdout 1`] = `""`;

exports[`compiler options when search string does not select test files: stderr 1`] = `
"Error: No test files were selected using current configuration.

Root path:       <<cwd>>/tests/__fixtures__/validation-runner
Test file match: **/*.tst.*, **/__typetests__/*.test.*, **/typetests/*.test.*
Path match:      sample

"
`;

exports[`compiler options when search string does not select test files: stdout 1`] = `""`;
